Bug 252119 - Moving items from "detail" views does not correctly update view, e.g. "move to trash".
Summary: Moving items from "detail" views does not correctly update view, e.g. "move t...
Status: VERIFIED FIXED
Alias: None
Product: KDE PIM Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Maemo 5 Linux
: NOR major
Target Milestone: ---
Assignee: Ludwig Reiter
URL:
Keywords:
: 251942 254733 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-09-23 11:45 UTC by Felix Wolfsteller
Modified: 2011-02-18 11:17 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Felix Wolfsteller 2010-09-23 11:45:54 UTC
0) start kmail-mobile
1) Select a folder with one mail in it
2) Read the mail
3) Actions->Edit->Move Item To... and move the mail somewhere

The display will now show "No messages in this folder", although no folder (but mail) was chosen before (i.e. its the list view without the folder selection on the left).

Similarly moving a (non-last) mail will result in a mainly white screen, whereas either the next mail, a confirmation dialog or the list view should be shown.

Found in 4:4.5~20100922.1178352-1maemo1.1177763 .
Comment 1 Felix Wolfsteller 2010-09-23 14:36:59 UTC
*** Bug 251942 has been marked as a duplicate of this bug. ***
Comment 2 Felix Wolfsteller 2010-09-23 14:38:54 UTC
This issue exists with other applications (e.g. addressbook), too.
Comment 3 Felix Wolfsteller 2010-10-20 11:04:40 UTC
*** Bug 254733 has been marked as a duplicate of this bug. ***
Comment 4 Till Adam 2010-11-07 00:03:38 UTC
SVN commit 1193743 by tilladam:

Make sure to emit itemRemoved in all code paths.

We need to notify listeners when our item is moved away, not just when
it's deleted. Move the signal emission into the clear slot, to achieve
this.

BUG: 252119

 M  +1 -2      viewer_p.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1193743
Comment 5 Andre Heinecke 2011-02-15 17:30:32 UTC
Ludwig please verify that the move actions update the view correctly
Comment 6 Ludwig Reiter 2011-02-18 11:17:11 UTC
Kontact Touch Windows CE 2011-02-11

Test: 
1. Open a folder with two mails.
2. Select one mail.
3. Actions/Edit/Move to Trash
=> The mail is move into the trash folder and the folder view with the second mail is displayed.
passed.

Okay.