Make sure to emit itemRemoved in all code paths.

We need to notify listeners when our item is moved away, not just when
it's deleted. Move the signal emission into the clear slot, to achieve
this.

BUG: 252119

svn path=/trunk/KDE/kdepim/messageviewer/; revision=1193743